--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
             <button id="new-game-btn">New Game</button>
             <div class="timer">⏱️ <span id="timer">0</span></div>
         </div>
-        <div id="grid" class="grid"></div>
+        <div class="game-layout">
+            <div id="grid" class="grid"></div>
+            <div class="vertical-title">MINESWEEPER</div>
+        </div>
+        <div class="rules">
+            <h2>How to Play</h2>
+            <ul>
+                <li>Left click to reveal a cell</li>
+                <li>Right click to flag a suspected mine</li>
+                <li>Numbers show how many mines are adjacent to that cell</li>
+                <li>Avoid clicking on mines!</li>
+                <li>Flag all mines and reveal all safe cells to win</li>
+            </ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
